fix(swagger): updating swagger documentation
